darkmode switch added to right column

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+input:checked ~ .dot {
+    transform: translateX(100%);
+    /* background-color: #132b50; */
+  }
